<?xml version="1.0"?>
<package>
  <name>labpkg</name>
  <version>0.0.0</version>
  <description>The labpkg package</description>

  <maintainer email="jchen255@ucmerced.edu">jchen255</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <export>
  </export>
</package>
